Fix image and text alignment in wp posts

--- a/shared/scss/components/cms/article.scss
+++ b/shared/scss/components/cms/article.scss
@@ -20,6 +20,14 @@
   line-height: 1.6;
   font-size: 1.6rem;
   color: $gray-dark;
+
+  .alignright {
+    margin: $base 0 $base $base;
+  }
+
+  .alignleft {
+    margin: $base $base $base 0;
+  }
 }
 
 .article p {
